@@ -1,29 +1,59 @@
+#ifndef HAVE_UNISTD_H
 #undef HAVE_UNISTD_H
+#endif
 
+#ifndef HAVE_PWD_H
 #undef HAVE_PWD_H
+#endif
 
+#ifndef HAVE_SYS_TIME_H
 #undef HAVE_SYS_TIME_H
+#endif
 
+#ifndef ODBC_STD
 #undef ODBC_STD
+#endif
 
+#ifndef UNICODE
 #undef UNICODE
+#endif
 
+#ifndef GUID_DEFINED
 #undef GUID_DEFINED
+#endif
 
+#ifndef SQL_WCHART_CONVERT
 #undef SQL_WCHART_CONVERT
+#endif
 
+#ifndef HAVE_LONG_LONG
 #undef HAVE_LONG_LONG
+#endif
 
+#ifndef ODBCINT64_TYPEA
 #undef ODBCINT64_TYPEA
+#endif
 
+#ifndef UODBCINT64_TYPE
 #undef UODBCINT64_TYPE
+#endif
 
+#ifndef DISABLE_INI_CACHING
 #undef DISABLE_INI_CACHING
+#endif
 
+#ifndef SIZEOF_LONG_INT
 #undef SIZEOF_LONG_INT
+#endif
 
+#ifndef ALLREADY_HAVE_WINDOWS_TYPE
 #undef ALLREADY_HAVE_WINDOWS_TYPE
+#endif
 
+#ifndef DONT_TD_VOID
 #undef DONT_TD_VOID
+#endif
 
+#ifndef DO_YOU_KNOW_WHAT_YOUR_ARE_DOING
 #undef DO_YOU_KNOW_WHAT_YOUR_ARE_DOING
+#endif
